# stack_vec

./: .gitignore  CMakeLists.txt  README.md  benchmark_function_runner.cpp  benchmark_parallel_runner.cpp  buffer_view.hpp  buffer_view_example.cpp  example.cpp  function_runner.hpp  function_runner_example.cpp  function_runner_slides.md  parallel_runner.hpp  parallel_runner_example.cpp  partial_sums_methods.cpp  stack_allocator.hpp
